2003-05-04  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (cob_get_sign, cob_put_sign): Redefined as macros.
	* common.c (cob_real_get_sign, cob_real_put_sign): Called from
	the above macros.

2003-05-03  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (COB_OPEN_NONE, COB_OPEN_LOCKED): New macros.
	(COB_CLOSE_REEL, COB_CLOSE_REEL_REMOVAL): Removed.
	(COB_FILE_CLOSED_WITH_LOCK): New macro.
	* fileio.c (sequential_close): Close with lock.
	(sequential_open): Seek to the end for extend file.
	(cob_open): Return COB_FILE_CLOSED_WITH_LOCK when file is locked.

2003-05-03  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_linage_counter): New variable.

2003-04-26  Keisuke Nishida  <knishida@netlab.jp>

	* common.h, common.c (cob_uint_attr, cob_sint_attr): Removed.
	(cob_ubin_attr, cob_sbin_attr): Removed.
	* move.c: Do not use them.

2003-04-03  Keisuke Nishida  <knishida@netlab.jp>

	* move.c (cob_get_int): Renamed from cob_to_int.

2003-03-30  Keisuke Nishida  <knishida@netlab.jp>

	* numeric.c (cob_decimal_set_int): Remove the 3rd argument `decimals'.
	(cob_decimal_set_int64): Removed.

2003-03-25  Keisuke Nishida  <knishida@netlab.jp>

	* exception.def: New file.

2003-03-06  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_field_to_string): Search for ' ' from backward.

2003-02-25  Keisuke Nishida  <knishida@netlab.jp>

	* common.c (cob_push_environment, cob_pop_environment): New functions.

2003-01-23  Keisuke Nishida  <knishida@netlab.jp>

	* fileio.h (cob_file): Break out flags.
	* fileio.c: Updated.

	* fileio.h, fileio.c (cob_dummy_status): Removed.
	* fileio.c (save_status): Check file_status before setting status.

2003-01-20  Keisuke Nishida  <knishida@netlab.jp>

	* common.h (COB_FLAG_HAVE_SIGN): New macro.
	(COB_FLAG_SIGN_SEPARATE): New macro.
	(COB_FLAG_SIGN_LEADING): New macro.
	(COB_FLAG_BLANK_ZERO): New macro.
	(COB_FLAG_JUSTFIED): New macro.
	(COB_FIELD_HAVE_SIGN): New macro.
	(COB_FIELD_SIGN_SEPARATE): New macro.